@@ -1,7 +1,7 @@
 use ExtUtils::MakeMaker;
 WriteMakefile(
               'NAME' => 'WWW::Search::Yahoo',
-              'VERSION_FROM' => 'lib/WWW/Search/Yahoo.pm',
+              'VERSION' => '2.24',
               'PREREQ_PM' => {
                               'Date::Manip' => 1,  # any version should do
                               'HTML::TreeBuilder' => 3.00,
