@@ -1,3 +1,9 @@
+2001-08-07  Kingpin  <mthurn@tasc.com>
+
+	* lib/WWW/Search/Yahoo/News/Advanced.pm (native_setup_search): default to OR search
+
+	* test.pl: fix all tests, and add new tests for Advanced News
+
 2001-07-16  Kingpin  <mthurn@tasc.com>
 
 	* test.pl: fix old tests, and add new tests for Advanced News
